# Mathub

./: CMakeLists.txt  README.md  core.h  example.cpp  expr.h  mathub.h
blob/: core.h  shape.h  utils.h
expression/: operations.h
mathub/: concepts.h  core.h  expression.h  mathub.h  operators.h  shape.h  utils.h
operators/: ops.h  traits.h
traits/: traits.h
